@@ -1,4 +1,5 @@
 May 2021 - 1.5.3
+- Bugfix: Fixes the DataBase update process to add the Q65 mode.
 - Bugfix: Unexpected Setup dialog behavior. (Closes issue #178) (TNX foldynl)
 - Bugfix: Time is not in UTC when "Log in real time" is uncheck. (Closes issue #179) (TNX foldynl)
 - Bugfix: Missing translation in SoftwareUpdateDialog. (Closes issue #180) (TNX foldynl)
@@ -11,7 +12,7 @@ May 2021 - 1.5.3
 - Bugfix: TQSL was not properly found on macOS. (Closes issue #195) (TNX K0JM)
 - Enhancement: Improved the readability of the DX Cluster window. (TNX foldynl)
 - Updated the KLog tips.
-- Translation: Czech (TNX OK1MLG)
+- Translation: Czech (TNX OK1MLG), Spanish.
 
 May 2021 - 1.5.2
 - Bugfix: Complex calls like K/EA4K/P were identified as wrong calls. (Closes issue #177) (TNX PA3FNT)
